# crypto_bot

./: .gitignore  README.md
bot/: pyproject.toml
bot/src/: main.py
bot/src/airtable_service/: airtable.py
bot/src/chain/: test.ipynb
bot/src/fetching_service/: constants.py  fetching_utils.py
bot/src/mongo_service/: mongo.py
bot/src/utils/: fetching_utils.py  news.py
crypto_bot/: deploy.sh
crypto_bot/bot/: pyproject.toml
crypto_bot/bot/src/: main.py
crypto_bot/bot/src/fetching_service/: constants.py  fetching_utils.py
crypto_bot/bot/src/mongo_service/: mongo.py
crypto_bot/bot_infra/: cdk.json  package-lock.json  package.json
crypto_bot/bot_infra/lib/: bot_infra-stack.ts
crypto_bot/bot_infra/test/: bot_infra.test.ts
proxy_service/: cdk.json  package-lock.json  package.json
proxy_service/lib/: proxy_service-stack.ts
proxy_service/src/: lambda.ts
proxy_service/test/: proxy_service.test.ts
